feat: create docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-gerencianet.client-id=
-gerencianet.client-secret=
-gerencianet.certificate-path=
-gerencianet.sandbox=
+gerencianet.client-id=${GERENCIANET_CLIENT_ID}
+gerencianet.client-secret=${GERENCIANET_CLIENT_SECRET}
+gerencianet.certificate-path=${GERENCIANET_CERTIFICATE_PATH}
+gerencianet.sandbox=${GERENCIANET_SANDBOX}
