feat: change java and spring boot version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,17 @@ gerencianet.client-id=${GERENCIANET_CLIENT_ID}
 gerencianet.client-secret=${GERENCIANET_CLIENT_SECRET}
 gerencianet.certificate-path=${GERENCIANET_CERTIFICATE_PATH}
 gerencianet.sandbox=${GERENCIANET_SANDBOX}
+
+aws.sqs.accessKey=${AWS_SQS_ACCESS_KEY}
+aws.sqs.secretKey=${AWS_SQS_SECRET_KEY}
+aws.sqs.queueUrl=${AWS_SQS_QUEUE_URL}
+aws.sqs.queueName=${AWS_SQS_QUEUE_NAME}
+
+cloud.aws.region.use-default-aws-region-chain=true
+cloud.aws.stack.auto=false
+cloud.aws.region.auto=false
+cloud.aws.region.static=${AWS_REGION}
+cloud.aws.stack=false
+
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
+logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
