--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.4.10</version>
+        <relativePath/>
     </parent>
     <groupId>com.microservice</groupId>
     <artifactId>pix-microservice</artifactId>
@@ -14,7 +14,7 @@
     <name>pix-microservice</name>
     <description>Pix Microservice</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
