--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,17 @@ gerencianet.client-secret=${GERENCIANET_CLIENT_SECRET}
 gerencianet.certificate-path=${GERENCIANET_CERTIFICATE_PATH}
 gerencianet.sandbox=${GERENCIANET_SANDBOX}
 
-aws.sqs.accessKey=${AWS_SQS_ACCESS_KEY}
-aws.sqs.secretKey=${AWS_SQS_SECRET_KEY}
 aws.sqs.queueUrl=${AWS_SQS_QUEUE_URL}
 aws.sqs.queueName=${AWS_SQS_QUEUE_NAME}
+queue.receiver.url=${RECEIVER_URL}
 
-cloud.aws.region.use-default-aws-region-chain=true
-cloud.aws.stack.auto=false
-cloud.aws.region.auto=false
-cloud.aws.region.static=${AWS_REGION}
-cloud.aws.stack=false
+cloud.aws.region.use-default-aws-region-chain=${CLOUD_AWS_REGION_USE_DEFAULT_REGION_CHAIN}
+cloud.aws.stack.auto=${CLOUD_AWS_STACK_AUTO}
+cloud.aws.credentials.access-key=${CLOUD_AWS_CREDENTIALS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${CLOUD_AWS_CREDENTIALS_SECRET_KEY}
+cloud.aws.region.auto=${CLOUD_AWS_REGION_AUTO}
+cloud.aws.region.static=${CLOUD_AWS_REGION_STATIC}
+cloud.aws.stack=${CLOUD_AWS_STACK}
 
-logging.level.com.amazonaws.util.EC2MetadataUtils=error
-logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
+logging.level.com.amazonaws.util.EC2MetadataUtils=${AWS_LOGGING_LEVEL_EC2_METADATA_UTILS}
+logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=${AWS_LOGGING_LEVEL_INSTANCE_RESOURCE_FETCHER} 
