--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ gerencianet.sandbox=${GERENCIANET_SANDBOX}
 
 aws.sqs.queueUrl=${AWS_SQS_QUEUE_URL}
 aws.sqs.queueName=${AWS_SQS_QUEUE_NAME}
-queue.receiver.url=${RECEIVER_URL}
+queue.receiver.url=${QUEUE_RECEIVER_URL}
 
 cloud.aws.region.use-default-aws-region-chain=${CLOUD_AWS_REGION_USE_DEFAULT_REGION_CHAIN}
 cloud.aws.stack.auto=${CLOUD_AWS_STACK_AUTO}
